2003-11-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element-gxx.h, gxx-declare-object-from-xml-tree.h, gxx-declare-object-to-xml-tree.h, gxx-impl-object-to-xml-tree.c, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h

	Use xml:lang instead of language attribute; started adding namespace support to gxx

	* cong-dispspec-element.c, cong-dispspec.c, cong-dispspec.h, cong-editor-node.c, cong-node.h, cong-overview-view.c, plugin-cleanup-source.c

	Removed paragraph type

	* cong-app.c, cong-app.h, cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h, cong-document.c, gxx-declare-object-from-xml-tree.h, gxx-declare-object-to-xml-tree.h, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h, gxx-undefine-shared-macros.h

	Dispspec elements now have hash tables from language to names and descriptions; extended GXX system to support load/save of these.

	* gxx-impl-object-to-xml-tree.c

	New file that implements helper functions for object->XML code

2003-11-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* gxx-declare-object-from-xml-tree.h, gxx-declare-object-to-xml-tree.h, Makefile.am, cong-dispspec-element-gxx.h, cong-dispspec-element.c, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h, gxx-undefine-shared-macros.h

	New files for generating declarations of gxx functions; reimplemented <header-info> load/save using gxx

2003-11-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h

	Added gxx support for element icon attribute, now outputs this correctly when saving xds files

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c

	Added gxx support for <header-info> tags, fixing a long-standing bug in xds saving

	* cong-dispspec-gxx.h, cong-dispspec.c

	Port <external-document-model> to gxx

	* cong-dispspec-gxx.h, Makefile.am, cong-dispspec.c, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h
